crates/pcb-layout/tests/snapshots/fpid_change__fpid_change_step1.log.snap
---
source: crates/pcb-layout/tests/fpid_change.rs
expression: content
---
INFO: Creating new board file at <TEMP_DIR>
INFO: Parsing JSON netlist from <TEMP_DIR>
DEBUG: Found module R1 with layout_path: None
INFO: --------------------------------------------------------------------------------
INFO: Running step: ImportNetlist
INFO: --------------------------------------------------------------------------------
INFO: Starting ImportNetlist...
INFO: Running lens-based netlist sync
INFO: Starting lens-based layout sync
INFO: Source: 1 footprints, 0 groups, 2 nets
INFO: Changes: +1 -0 footprints
INFO: NEW FPV path=R1.R ref=R1 value=10k fpid=kicad_libraries_kicad-footprints_Resistor_SMD@10.0.3:R_0402_1005Metric fields=["Package=0402", "Prefix=R", "Resistance=10k", "Type=resistor"]
INFO: NEW FPC path=R1.R x=0 y=0 orient=0.0 layer=F.Cu
INFO: CHANGESET FP_ADD path=R1.R ref=R1 fpid=kicad_libraries_kicad-footprints_Resistor_SMD@10.0.3:R_0402_1005Metric value=10k x=0 y=0 layer=F.Cu
INFO: Added footprint: R1.R
INFO: HierPlace: placed 1 items
INFO: OPLOG FP_ADD path=R1.R ref=R1 fpid=kicad_libraries_kicad-footprints_Resistor_SMD@10.0.3:R_0402_1005Metric value=10k x=0 y=0 layer=F.Cu pads=2
INFO: OPLOG NET_ADD name=GND
INFO: OPLOG NET_ADD name=VCC
INFO: OPLOG PLACE_FP path=R1.R x=147545000 y=104505000 w=1910000 h=990000
INFO: Sync completed in X.XXXs
INFO: Lens sync complete: +1 -0 footprints
INFO: Completed ImportNetlist in X.XXX seconds
INFO: --------------------------------------------------------------------------------
INFO: Running step: FinalizeBoard
INFO: --------------------------------------------------------------------------------
INFO: Starting FinalizeBoard...
INFO: Saved layout snapshot to <TEMP_DIR>
INFO: Snapshot export took X.XXX seconds
INFO: Board saving took X.XXX seconds
INFO: Completed FinalizeBoard in X.XXX seconds
